4.2.2
	Make LDAP querries timeout configurable
	Make MX sync timeout peer-configurable (Attila Bruncsak)
4.2.1
	Fix a crash when a LDAP server is down
4.2
	Update contributor list
	Make sure dump is really on disk even with a buggy ext4fs
	Build with OpenLDAP but not CURL (Matthias Scheler)
4.2rc1
	Do not complain about unreachable p0f daemon if it is unconfigured
	Fix buffer overflow in SpamAssassin support (Enrico Scholz)
	Build fix on Tru64 and Solaris
4.2b1
	Fix socket mode in sample config file
4.1.12
	Build fix for missing STAILQ_* macros
4.1.11
	Evaluate list clases in forward order (Rudy Eschauzier)
	Fix crashes on regex substring matches (Rudy Eschauzier)
4.1.10
	Build fix as some commits were missing
4.1.9
	Workaround "peer queue overflow" bugs (Laurence Moindrot, Jean Benoit)
4.1.8
	Allow regex on properties
	Allow extended regex substitution 
	Custom headers can now be added to the message
	Fix build with both SpamAssassin and SPF (Joel Bertrand)
4.1.7
	Add p0f-required macros in milter-greylist.m4 (Joel Bertrand)
	Fix memory leak (Constantine A. Murenin)
	Add option to match exact domain instead of substrings (Rick Adams)
	Make sure no message chunks is skip at Data stage ACL (Manuel Badzong)
	Removes duplicate <> in SpamAssassin headers (Manuel Badzong)
	Fixes a flaw in SpamAssassin initialization (Manuel Badzong)
        Support SpamAssassin spf and dkim checks (Manuel Badzong)
	Make sure DKIM code does not use invalid pointers
	Add libspf2 support to .spec file for RPM (Joe Pruett)
	Solaris build fix (Johann Klasek)
	Fix memory leak in SpamAssassin code (Manuel Badzong)
	Make implicit default rule at DATA stage silent (Greg Troxel)
4.1.6
	Fix parse bug for "domain no" clause
	Spamassassin support (Manuel Badzong)
	Support for DATA-stage greylisting (Manuel Badzong)
	Allow syslog facility to be configured (Joe Pruett)
	Allow logging to be disabled on a per-ACL basis (Joe Pruett)
	Honour $CPPFLAGS in Makefile (Greg Troxel)
	p0f support