@@ -1,4 +1,5 @@
 4.2.2
+	Fix LDAP thread safety issues
 	Make LDAP querries timeout configurable
 	Make MX sync timeout peer-configurable (Attila Bruncsak)
 4.2.1
